# libserial

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
serialport/: CMakeLists.txt
serialport/include/serialport/: enumerator.hpp  namespace.hpp  properties.hpp  serialport.hpp
serialport/include/serialport/linux/: properties.hpp  serialport_impl.hpp
serialport/include/serialport/windows/: properties.hpp  serialport_impl.hpp
serialport/src/: enumerator.cpp  properties.cpp  serialport.cpp
serialport/src/linux/: serialport_impl.cpp
serialport/src/windows/: serialport_impl.cpp
serialport/test/: CMakeLists.txt
serialport/test/include/serialport_test/: test_properties.hpp  test_serialport_impl.hpp
serialport/test/src/: test_enumerator.cpp  test_properties.cpp  test_serialport.cpp  test_serialport_impl.cpp  testapp.cpp
